[package]
name = "ac4490"
version = "0.2.2"
edition = "2021"
description = "Rust driver for the Ezurio / Laird / Aerocomm AC4490 transceiver"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ac4490"
path = "src/lib/mod.rs"

[dependencies]
defmt = "0.3"
num_enum = { version = "0.7.2", default-features = false }
thiserror-no-std = "2.0.2"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = { level = "deny", priority = -1 }
nursery = { level = "deny", priority = -1 }
unwrap_used = "deny"